--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "dependencies": {
     "next": "^14.2.33",
     "react": "^18.3.1",
