feat: ProfesionalizaciÃ³n completa de estÃ©tica - Mejoras tipogrÃ¡ficas, componentes UI refinados, animaciones sutiles y correcciÃ³n de colores Hero

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
     "strict": true,
@@ -19,7 +19,15 @@
       "@": ["./src"]
     },
     "plugins": [{ "name": "next" }],
-    "allowJs": true
+    "allowJs": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "useUnknownInCatchVariables": true
   },
   "include": [
     "next-env.d.ts",
@@ -27,5 +35,5 @@
     "src/**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist", ".next", "out"]
 }
