--- a/.prettierignore
+++ b/.prettierignore
@@ -15,14 +15,11 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
-.vercel/
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
 # Runtime data
 pids
@@ -32,7 +29,6 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
-*.lcov
 
 # nyc test coverage
 .nyc_output
@@ -56,30 +52,37 @@ node_modules/
 .cache
 .parcel-cache
 
-# Next.js build output
+# next.js build output
 .next
 
-# Nuxt.js build output
+# nuxt.js build output
 .nuxt
 
-# Gatsby files
-.cache/
-public
+# vuepress build output
+.vuepress/dist
 
-# Storybook build outputs
-.out
-.storybook-out
+# Serverless directories
+.serverless
 
-# Temporary folders
-tmp/
-temp/
+# FuseBox cache
+.fusebox/
 
-# Editor directories and files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Package lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Generated files
+*.tsbuildinfo
 
 # OS generated files
 .DS_Store
@@ -89,24 +92,3 @@ temp/
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# TypeScript
-*.tsbuildinfo
-
-# Package lock files (keep one, ignore others)
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# ESLint cache
-.eslintcache
-
-# Prettier cache
-.prettiercache
-
-# Bundle analyzer
-.bundle-analyzer/
-
-# Testing
-coverage/
-.nyc_output/
