--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
   "name": "santa-frida-farm",
   "version": "1.0.0",
-  "description": "",
+  "description": "Premium agricultural products platform - Santa Frida Farm. Hass avocado, specialty coffee, and organic vegetables from Marinilla, Antioquia, Colombia.",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "analyze": "ANALYZE=true next build",
+    "clean": "rm -rf .next out dist"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "agriculture",
+    "colombia",
+    "hass-avocado",
+    "specialty-coffee",
+    "organic-vegetables",
+    "nextjs",
+    "typescript",
+    "tailwindcss"
+  ],
+  "author": "Santa Frida Farm <santafrida.colombia@gmail.com>",
+  "license": "MIT",
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=18.17.0",
+    "npm": ">=8.0.0"
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
@@ -22,12 +38,22 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.33",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.6.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.33",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.3.0",
     "sharp": "^0.34.4",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
